# harvesting_robot

./: .gitignore  Dockerfile  Dockerfile.test  README.md  REPO_STRUCTURE.md  REQUIREMENTS.md  cotton-harvest-demo.html  mock_setup.md  pyproject.toml
_legacy/example_arm_description/: package.xml  setup.py
_legacy/example_arm_description/description/: example_robot.urdf.xacro
_legacy/example_arm_description/example_arm_description/: __init__.py  tcp_monitor.py
_legacy/example_arm_description/rviz/: display.rviz
_legacy/example_arm_moveit_config/: package.xml  setup.cfg  setup.py
_legacy/example_arm_moveit_config/config/: example_arm.srdf  kinematics.yaml  moveit_controllers.yaml
_legacy/example_arm_moveit_config/launch/: demo.launch.py
robot_arm/: CMakeLists.txt  README.md  package.xml  setup.py
robot_arm/config/: branch_variant_targets.yaml  cotton_cluster_sockets.yaml  cotton_demo_bolls.yaml  cotton_demo_clusters.yaml  cotton_targets.yaml  environment_config.yaml  gz_bridge.yaml  husky_gz_bridge.yaml  orchard_bolls.yaml  orchard_pickable_bolls.yaml  orchard_tree_positions.yaml
robot_arm/env-hooks/: robot_arm.dsv.in
robot_arm/launch/: bot.launch.py  husky_autonomous.launch.py  husky_orchard_demo.launch.py  husky_orchard_demo_2.launch.py  husky_test.launch.py  orchard_test.launch.py
robot_arm/meshes/exchanger/: hande_base.dae
robot_arm/meshes/m1013_blue/: MF1013_0_0.dae
robot_arm/meshes/wrist/: gripper_60mm.stl  mount_bracket.stl  realsense_d435_low.stl
robot_arm/models/branch_variant_A_mature_white_01/: model.config  model.sdf
robot_arm/models/branch_variant_A_mature_white_01/meshes/: branch_variant_A_mature_white_01.dae
robot_arm/models/branch_variant_B_mixed_green_01/: model.config  model.sdf
robot_arm/models/branch_variant_B_mixed_green_01/meshes/: branch_variant_B_mixed_green_01.dae
robot_arm/models/branch_variant_C_mixed_brown_01/: model.config  model.sdf
robot_arm/models/branch_variant_C_mixed_brown_01/meshes/: branch_variant_C_mixed_brown_01.dae
robot_arm/models/branch_variant_D_sparse_green_01/: model.config  model.sdf
robot_arm/models/branch_variant_D_sparse_green_01/meshes/: branch_variant_D_sparse_green_01.dae
robot_arm/models/branch_variant_E_tall_mature_01/: model.config  model.sdf
robot_arm/models/branch_variant_E_tall_mature_01/meshes/: branch_variant_E_tall_mature_01.dae
robot_arm/models/branch_variant_F_dry_brown_01/: model.config  model.sdf
robot_arm/models/branch_variant_F_dry_brown_01/meshes/: branch_variant_F_dry_brown_01.dae
robot_arm/models/cotton_cluster/: cluster.dae  model.config  model.sdf
robot_arm/models/cotton_cluster/ImageToStl.com_object_0/: object_0.dae
robot_arm/models/cotton_cluster/ImageToStl.com_object_1/: object_1.stl
robot_arm/models/cotton_field_ground/: model.config  model.sdf
robot_arm/models/cotton_orchard_clean/: model.config  model.sdf
robot_arm/models/cotton_orchard_static/: model.config  model.sdf
robot_arm/models/cotton_picks/cotton_pick_A_01/: model.config  model.sdf
robot_arm/models/cotton_picks/cotton_pick_A_02/: model.config  model.sdf
robot_arm/models/cotton_picks/cotton_pick_A_03/: model.config  model.sdf
robot_arm/models/cotton_picks/cotton_pick_A_04/: model.config  model.sdf
robot_arm/models/cotton_picks/cotton_pick_A_05/: model.config  model.sdf
robot_arm/models/cotton_picks/cotton_pick_A_06/: model.config  model.sdf
robot_arm/models/cotton_picks/cotton_pick_A_07/: model.sdf
robot_arm/models/cotton_picks/cotton_pick_A_08/: model.config
robot_arm/models/cotton_picks/cotton_pick_A_09/: model.config  model.sdf
robot_arm/models/cotton_picks/cotton_pick_A_10/: model.sdf
robot_arm/models/cotton_picks/cotton_pick_A_11/: model.config
robot_arm/models/cotton_picks/cotton_pick_A_12/: model.config
robot_arm/models/cotton_picks/cotton_pick_A_13/: model.config
robot_arm/models/cotton_picks/cotton_pick_A_14/: model.sdf
robot_arm/models/cotton_picks/cotton_pick_A_15/: model.config
robot_arm/models/cotton_picks/cotton_pick_A_16/: model.sdf
robot_arm/models/cotton_picks/cotton_pick_A_17/: model.sdf
robot_arm/models/cotton_picks/cotton_pick_B_01/: model.config  model.sdf
robot_arm/models/cotton_picks/cotton_pick_B_02/: model.config  model.sdf
robot_arm/models/cotton_picks/cotton_pick_B_03/: model.config  model.sdf
robot_arm/models/cotton_picks/cotton_pick_B_04/: model.config  model.sdf
robot_arm/models/cotton_picks/cotton_pick_B_05/: model.sdf
robot_arm/models/cotton_picks/cotton_pick_B_06/: model.config
robot_arm/models/cotton_picks/cotton_pick_B_07/: model.config
robot_arm/models/cotton_picks/cotton_pick_B_08/: model.config  model.sdf
robot_arm/models/cotton_picks/cotton_pick_B_09/: model.sdf
robot_arm/models/cotton_picks/cotton_pick_B_10/: model.config  model.sdf
robot_arm/models/single_tree/: model.config  model.sdf
robot_arm/robot_arm/: __init__.py  landmark_publisher.py
robot_arm/scripts/: extract_field_ground.py  extract_single_tree.py  extract_tree_positions.py  generate_bolls.py  generate_cotton_demo.py  generate_pickable_orchard.py  measure_cluster_template_extent.py  setup_cotton_in_car.py  setup_cotton_model.py  sketch_system.py  strip_distractors_from_dae.py
robot_arm/src/: tcp_monitor.py  write_pos.py
robot_arm/urdf/: husky_robocot.urdf.xacro  husky_robocot_2.urdf.xacro  m1013_robocot.urdf.xacro  m1013_robocot_2.urdf.xacro  mybot.urdf.xacro
robot_arm/worlds/: cotton_demo.world  cotton_field.world  example.world  orchard.world  orchard_bolls.world  orchard_pickable.world  orchard_pickable_no_trees.world  test_car.world  test_cotton.world
robot_arm/yaml/: controllers.yaml
robot_arm_moveit_config/: CMakeLists.txt  package.xml
robot_arm_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  robot_arm.srdf
robot_arm_moveit_config/config_old/: joint_limits.yaml  ros2_controllers.yaml
robot_arm_moveit_config/launch/: moveit.launch.py  moveit_2.launch.py
robot_arm_moveit_config/robot_arm_moveit_config/: __init__.py  arm_commander.py
(+303 files in other folders)
